terraform/prod/eks/ingress-controller-deployment.yaml
# Application Load Balancer (ALB) Ingress Controller Deployment Manifest.
# This manifest details sensible defaults for deploying an ALB Ingress Controller.
# GitHub: https://github.com/kubernetes-sigs/aws-alb-ingress-controller
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: alb-ingress-controller
  name: alb-ingress-controller
  # Namespace the ALB Ingress Controller should run in. Does not impact which
  # namespaces it's able to resolve ingress resource for. For limiting ingress
  # namespace scope, see --watch-namespace.
  namespace: kube-system
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: alb-ingress-controller
  template:
    metadata:
      labels:
        app.kubernetes.io/name: alb-ingress-controller
    spec:
      containers:
      - name: alb-ingress-controller
        args:
        # Limit the namespace where this ALB Ingress Controller deployment will
        # resolve ingress resources. If left commented, all namespaces are used.
        # - --watch-namespace=your-k8s-namespace
            
        # Setting the ingress-class flag below ensures that only ingress resources with the
        # annotation kubernetes.io/ingress.class: "alb" are respected by the controller. You may
        # choose any class you'd like for this controller to respect.
        - --ingress-class=alb
        # REQUIRED
        # Name of your cluster. Used when naming resources created
        # by the ALB Ingress Controller, providing distinction between
        # clusters.
        # - --cluster-name=devCluster
        - --cluster-name=eks-workshop-cluster
        # AWS VPC ID this ingress controller will use to create AWS resources.
        # If unspecified, it will be discovered from ec2metadata.
        - --aws-vpc-id=vpc-065ee925737543c19
        # AWS region this ingress controller will operate in.
        # If unspecified, it will be discovered from ec2metadata.
        # List of regions: http://docs.aws.amazon.com/general/latest/gr/rande.html#vpc_region
        - --aws-region=ap-northeast-2
        # Enables logging on all outbound requests sent to the AWS API.
        # If logging is desired, set to true.
        - --aws-api-debug

        # Maximum number of times to retry the aws calls.
        # defaults to 10.
        - --aws-max-retries=10
        # Repository location of the ALB Ingress Controller.
        image: docker.io/amazon/aws-alb-ingress-controller:v1.1.8
      serviceAccountName: alb-ingress-controller
